feat: 1 hour between runs